--- a/prac04/pom.xml
+++ b/prac04/pom.xml
@@ -41,7 +41,7 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     <developer>
       <id>u19025492</id>
       <name>Yashvitha Kanaparthy</name>
-      <email></email>
+      <email>u19025492@tuks.co.za</email>
       <url></url>
       <organization>UP</organization>
       <organizationUrl>http://www.example.com</organizationUrl>
@@ -56,7 +56,7 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        <developer>
       <id>u20450207</id>
       <name>Sovaria Naidu</name>
-      <email></email>
+      <email>u20450207@tuks.co.za</email>
       <url></url>
       <organization>UP</organization>
       <organizationUrl>http://www.example.com</organizationUrl>
